# Design-Patterns

./: .clang-format  CMakeLists.txt  README.md
include/Singleton/: Singleton.hpp
src/Singleton/: CMakeLists.txt  Main.cpp  Singleton.cpp
